<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_gradient_selector"
    tools:context="com.safayousif.campmusicplayer.ui.screens.MainActivity">

    <Button
        android:id="@+id/tvMusicHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/music_header"
        android:textColor="@color/white"
        style="@style/Widget.AppCompat.TextView"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tvAudiobookHeader"
        android:text="@string/audiobook_header"
        style="@style/Widget.AppCompat.TextView"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/gray_faded"
        app:layout_constraintEnd_toStartOf="@+id/ivLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvMusicHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvMusicHeader" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_sync" />

    <Button
        android:id="@+id/tvSyncHeader"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="0dp"
        android:text="@string/sync_header"
        android:textColor="@color/gray_faded"
        app:layout_constraintBottom_toBottomOf="@+id/ivBtnSync"
        app:layout_constraintEnd_toStartOf="@+id/ivBtnSync"
        app:layout_constraintTop_toTopOf="@+id/ivBtnSync" />

    <ImageButton
        android:id="@+id/ivBtnSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svSearch"
        app:srcCompat="@android:drawable/stat_notify_sync" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaylist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toTopOf="@+id/tvAllSongs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlaylists" />

    <ImageButton
        android:id="@+id/ivBtnPlaylistAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/tvPlaylists"
        app:layout_constraintStart_toEndOf="@+id/tvPlaylists"
        app:layout_constraintTop_toTopOf="@+id/tvPlaylists"
        app:srcCompat="@drawable/ic_playlist_add" />

    <ImageButton
        android:id="@+id/ivBtnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/tvPlaylists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivBtnPlaylistAdd"
        app:layout_constraintTop_toTopOf="@+id/tvPlaylists"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/tvPlaylists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:text="@string/playlists_header"
        android:textColor="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvAllSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:text="@string/all_songs_header"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvPlaylist" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAllSongs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAllSongs" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svSearch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <androidx.appcompat.widget.SearchView-->
<!--        android:id="@+id/svSearch"-->
<!--        style="@style/Widget.AppCompat.TextView"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@android:color/transparent"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/search_title"-->
<!--        android:inputType="text"-->
<!--        android:minWidth="0dp"-->
<!--        android:minHeight="0dp"-->
<!--        android:padding="0dp"-->
<!--        android:textAlignment="viewEnd"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorHint="@color/gray_faded"-->
<!--        app:iconifiedByDefault="false"-->
<!--        android:gravity="right"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/ivBtnSearch"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/ivBtnSearch"-->
<!--        app:layout_constraintStart_toEndOf="@+id/ivLogo"-->
<!--        app:layout_constraintTop_toTopOf="@+id/ivBtnSearch"-->
<!--        app:layout_wrapBehaviorInParent="horizontal_only"-->
<!--        tools:ignore="RtlCompat" />-->

</androidx.constraintlayout.widget.ConstraintLayout>